(include_subdirs unqualified)

(library
 (public_name binsec.kernel)
 (name binsec_kernel)
 (modules binsec_kernel)
 (library_flags
  (:standard -linkall))
 (flags
  (:standard -w -3-69))
 (libraries
  unix
  ocamlgraph
  binsec.base
  binsec.kernel.dba
  binsec.kernel.parser
  binsec.kernel.loader
  binsec.kernel.isa
  binsec.domains
  binsec.dwarf))
