(include_subdirs no)

(library
 (public_name binsec.script)
 (name binsec_script)
 (modules syntax binsec_script)
 (flags
  (:standard -open Binsec_kernel -open Binsec_script_ast -w "-27-32-58"))
 (libraries binsec_script_ast dyp))

(executable
 (name dypgen_wrapper)
 (modules dypgen_wrapper)
 (libraries unix binsec_kernel binsec_script_ast))

(rule
 (targets syntax.mli syntax.ml syntax_temp.ml)
 (deps
  (:exe dypgen_wrapper.exe)
  (:src syntax.dyp))
 (action
  (run
   %{exe}
   %{lib:dyp:META}
   %{lib:zarith:META}
   %{lib:binsec:META}
   %{bin:dypgen}
   %{src})))

(library
 (public_name binsec.script.ast)
 (name binsec_script_ast)
 (modules ast)
 (flags :standard -open Binsec_kernel)
 (libraries binsec_kernel dyp))
