(include_subdirs no)

(library
 (public_name binsec.smt)
 (name smt)
 (modules :standard)
 (modules_without_implementation smt_sig)
 (flags
  (:standard -open Binsec))
 (library_flags
  (:standard -linkall))
 (libraries
  binsec
  (select
   smt_bitwuzla.ml
   from
   (bitwuzla -> smt_bitwuzla.enabled.ml)
   (!bitwuzla -> smt_bitwuzla.stubs.ml))))
