(include_subdirs unqualified)

(library
 (name se)
 (modules :standard)
  (modules_without_implementation solver_sig)
 (flags
  (:standard -open Binsec -open Smt))
 (library_flags
  (:standard -linkall))
 (libraries binsec smt
  (select
    native_solver.ml
    from
    (bitwuzla -> native_solver.enabled.ml)
    (!bitwuzla -> native_solver.stubs.ml))))

(rule
 (copy ../dba/dba_expr_parser.mly dba_expr_parser.mly))

(rule
 (copy ../dba/dba_instr_parser.mly dba_instr_parser.mly))

(rule
 (copy ../dba/dba_chunk_parser.mly dba_chunk_parser.mly))

(rule
 (copy ../dba/dba_env_parser.mly dba_env_parser.mly))

(rule
 (with-stdout-to
  sse_lexer.mll
  (progn
   (cat sse_lexer.mll.header)
   (cat ../dba/dba_lexer.mll.decl)
   (cat sse_lexer.mll.ext)
   (cat ../dba/dba_lexer.mll.body))))

(menhir
 (modules dba_expr_parser dba_instr_parser dba_chunk_parser script_parser)
 (flags --only-tokens)
 (merge_into sse_tokens))

(menhir
 (modules
  dba_expr_parser
  dba_instr_parser
  dba_chunk_parser
  dba_env_parser
  script_parser)
 (flags --fixed-exception --external-tokens Sse_tokens)
 (merge_into sse_parser))

(ocamllex
 (modules sse_lexer))
