(include_subdirs no)

(tests
 (names t_formula t_sequence)
 (modules t_formula t_sequence)
 (libraries binsec ounit2 qcheck)
 (flags
  (:standard -open Binsec))
 ; bytecode tests fail to link in nix-shell
 (modes native)
 (action
  (run %{test})))

(test
 (name t_hmap)
 (modules t_hmap)
 (libraries binsec qcheck-core qcheck-core.runner)
 (flags
  (:standard -open Binsec_base))
 ; bytecode tests fail to link in nix-shell
 (modes native))

(test
 (name t_zmap)
 (modules t_zmap)
 (libraries binsec unionFind qcheck-core qcheck-core.runner)
 (flags
  (:standard -open Binsec_base))
 ; bytecode tests fail to link in nix-shell
 (modes native))
