(library
 (public_name tuto.shadow_stack)
 (name tuto_shadow_stack)
 (modules tuto_shadow_stack)
 (libraries binsec.sse))

(library
 (public_name tuto.registration)
 (name tuto_registration)
 (modules tuto_registration)
 (libraries binsec.cli.sse tuto.shadow_stack))

(plugin
 (name tuto)
 (libraries tuto.registration)
 (site
  (binsec plugins)))
