(include_subdirs no)

(library
 (public_name binsec.armv8decoder)
 (name armv8decoder)
 (modules (:standard))
 (library_flags
  (:standard -linkall))
 (flags
  (:standard -w -3 -open Binsec))
 (libraries
  binsec
  (select
   aarch64ToDba.ml
   from
   (unisim_archisec.aarch64dba -> aarch64ToDba.enabled.ml)
   (-> aarch64ToDba.disabled.ml))))
