(include_subdirs no)

(library
 (public_name binsec.sparcv8decoder)
 (name sparcv8decoder)
 (modules (:standard))
 (library_flags
  (:standard -linkall))
 (flags
  (:standard -w -3 -open Binsec))
 (libraries
  binsec
  (select
   sparcV8ToDba.ml
   from
   (unisim_archisec.sparcdba -> sparcV8ToDba.enabled.ml)
   (-> sparcV8ToDba.disabled.ml))))
